welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:6: error: not found: value lookingFor
		if(nums(n) == lookingFor){
                              ^